--- a/index.html
+++ b/index.html
@@ -405,7 +405,8 @@
           
           <div class="publication-video">
             <!-- TODO: Replace with your YouTube video ID -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<!--            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>-->
+            <iframe src="https://www.bilibili.com/video/BV1C2gozCEMT/?spm_id_from=333.1387.homepage.video_card.click&vd_source=76446368a03ef22caf531595d665cb93" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
