--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       </video>
       <!-- TODO: Replace with your video description -->
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        智能触觉布料与MuJoCo仿真的交互效果.
       </h2>
     </div>
   </div>
@@ -341,7 +341,7 @@
         <div class="content has-text-justified">
           <!-- TODO: Replace with your paper abstract -->
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+            本项目聚焦于电阻式感应阵列的触觉传感器研究。智能触觉布料采用柔性且薄层设计，与市面上高成本的触觉传感器相比，本团队开发的触觉布料具有低成本且耐用的显著优势。触觉布料由16×16阵列的感应点组成，具备高空间分辨率。布料中的压阻层随施加的机械压力变化而改变电阻，从而将压力精确转换为电信号。智能触觉布料可应用于机器人机械手触觉抓取，外骨骼机器人的肢体绑缚设计以及鞋底压力感知等领域。.
           </p>
         </div>
       </div>
@@ -422,7 +422,7 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
+      <h2 class="title is-3">Another Demo</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
           <!-- TODO: Add poster image for better preview -->
