--- a/index.html
+++ b/index.html
@@ -482,24 +482,24 @@
 
 
 <!--BibTex citation -->
-  <section class="section" id="BibTeX">
-    <div class="container is-max-desktop content">
-      <div class="bibtex-header">
-        <h2 class="title">BibTeX</h2>
-        <button class="copy-bibtex-btn" onclick="copyBibTeX()" title="Copy BibTeX to clipboard">
-          <i class="fas fa-copy"></i>
-          <span class="copy-text">Copy</span>
-        </button>
-      </div>
-      <pre id="bibtex-code"><code>@article{STF2025,
-  title={/},
-  author={Jiayi Wen and Yunsheng Ma and Jiaxin Huang and Hanyu Liu and Xinran Li and Zhigong Song},
-  journal={/},
-  year={2025},
-  url={/}
-}</code></pre>
-    </div>
-</section>
+<!--  <section class="section" id="BibTeX">-->
+<!--    <div class="container is-max-desktop content">-->
+<!--      <div class="bibtex-header">-->
+<!--        <h2 class="title">BibTeX</h2>-->
+<!--        <button class="copy-bibtex-btn" onclick="copyBibTeX()" title="Copy BibTeX to clipboard">-->
+<!--          <i class="fas fa-copy"></i>-->
+<!--          <span class="copy-text">Copy</span>-->
+<!--        </button>-->
+<!--      </div>-->
+<!--      <pre id="bibtex-code"><code>@article{STF2025,-->
+<!--  title={/},-->
+<!--  author={Jiayi Wen and Yunsheng Ma and Jiaxin Huang and Hanyu Liu and Xinran Li and Zhigong Song},-->
+<!--  journal={/},-->
+<!--  year={2025},-->
+<!--  url={/}-->
+<!--}</code></pre>-->
+<!--    </div>-->
+<!--</section>-->
 <!--End BibTex citation -->
 
 
