--- a/index.html
+++ b/index.html
@@ -245,17 +245,17 @@
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Jiayi Wen</a><sup>*</sup>,</span>
+                <a>Jiayi Wen</a><sup>*</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Yunsheng Ma</a><sup>*</sup>,</span>
+                  <a>Yunsheng Ma</a><sup>*</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jiaxin Huang</a>,</span>
+                    <a href="https://hjx-exoskeleton.github.io/" target="_blank">Jiaxin Huang</a>,</span>
                     <span class="author-block">
-                      <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Hanyu Liu</a>,</span>
+                      <a href="https://henryliukkk.github.io/" target="_blank">Hanyu Liu</a>,</span>
                       <span class="author-block">
-                        <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Xinran Li</a>,</span>
+                        <a>Xinran Li</a>,</span>
                         <span class="author-block">
-                          <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Zhigong Song</a><sup>†</sup>
+                          <a>Zhigong Song</a><sup>†</sup>
                     </span>
                   </div>
 
