--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
                     <span class="author-block">Jiangsu Provincial Key Laboratory of Food Advanced Manufacturing Equipment Technology, School of Mechanical Engineering, Jiangnan University, Wuxi, China.<br>Smart-Tactile-Fabric (STF)</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                     <span class="eql-cntrb"><small><br><sup>†</sup>Corresponding Author</small></span>
+                    <span class="eql-cntrb"><small><br><sup>！</sup>已提交专利</small></span>
                   </div>
 
                   <div class="column has-text-centered">
