--- a/index.html
+++ b/index.html
@@ -260,10 +260,9 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Jiangsu Provincial Key Laboratory of Food Advanced Manufacturing Equipment Technology, School of Mechanical Engineering, Jiangnan University, Wuxi, China.<br>Smart-Tactile-Fabric (STF)</span>
+                    <span class="author-block">Jiangsu Provincial Key Laboratory of Food Advanced Manufacturing Equipment Technology, School of Mechanical Engineering, Jiangnan University, Wuxi, China.<br>Smart-Tactile-Fabric (STF) 已提交专利</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                     <span class="eql-cntrb"><small><br><sup>†</sup>Corresponding Author</small></span>
-                    <span class="eql-cntrb"><small><br><sup>！</sup>已提交专利</small></span>
                   </div>
 
                   <div class="column has-text-centered">
