--- a/index.html
+++ b/index.html
@@ -445,13 +445,13 @@
           </video>
         </div>
 
-<!--        <div class="item item-video3">-->
-<!--          &lt;!&ndash; TODO: Add poster image for better preview &ndash;&gt;-->
-<!--          <video poster="" id="video3" controls muted loop height="100%" preload="metadata">-->
-<!--            &lt;!&ndash; Your video file here &ndash;&gt;-->
-<!--            <source src="static/videos/carousel3.mp4" type="video/mp4">-->
-<!--          </video>-->
-<!--        </div>-->
+        <div class="item item-video3">
+          <!-- TODO: Add poster image for better preview -->
+          <video poster="" id="video3" controls muted loop height="100%" preload="metadata">
+            <!-- Your video file here -->
+            <source src="static/videos/carousel3.mp4" type="video/mp4">
+          </video>
+        </div>
 
       </div>
     </div>
