--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <div class="content has-text-justified">
           <!-- TODO: Replace with your paper abstract -->
           <p>
-            本项目聚焦于电阻式感应阵列的触觉传感器研究。智能触觉布料采用柔性且薄层设计，与市面上高成本的触觉传感器相比，本团队开发的触觉布料具有低成本且耐用的显著优势。触觉布料具备高空间分辨率，布料中的压阻层随施加的机械压力变化而改变电阻，从而将压力精确转换为电信号。智能触觉布料可应用于机器人机械手触觉抓取，外骨骼机器人的肢体绑缚设计以及鞋底压力感知等领域.
+            本项目聚焦于电阻式感应阵列的触觉传感器。智能触觉布料采用柔性且薄层设计，与市面上高成本的触觉传感器相比，本团队开发的触觉布料具有低成本且耐用的显著优势。触觉布料具备高空间分辨率，布料中的压阻层随施加的机械压力变化而改变电阻，从而将压力精确转换为电信号。智能触觉布料可应用于机器人机械手触觉抓取，外骨骼机器人的肢体绑缚设计以及鞋底压力感知等领域.
           </p>
         </div>
       </div>
