--- a/index.html
+++ b/index.html
@@ -454,6 +454,14 @@
           </video>
         </div>
 
+        <div class="item item-video4">
+          <!-- TODO: Add poster image for better preview -->
+          <video poster="" id="video4" controls muted loop height="100%" preload="metadata">
+            <!-- Your video file here -->
+            <source src="static/videos/carousel4.mp4" type="video/mp4">
+          </video>
+        </div>
+
       </div>
     </div>
   </div>
