--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       </video>
       <!-- TODO: Replace with your video description -->
       <h2 class="subtitle has-text-centered">
-        智能触觉布料(手套)演示.
+        智能触觉布料(手套)演示效果.
       </h2>
     </div>
   </div>
